# MandelbrotSetSRiR

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  README.md  main.cpp  mandel_test.cpp  mandelbrot.run  mandelbrot_openmp.cpp
parallel/: Board.c  Board.cpp  Board.h  CMakeLists.txt  Client.c  Client.cpp  Client.h  Config.c  Config.cpp  Config.h  Makefile  MessagesTags.h  MpeLogFlags.h  MpeLogs.h  Server.c  Server.cpp  Server.h  Utils.c  Utils.cpp  Utils.h  examples.sh  main.c  main.cpp  plot.plt
single-process/: CMakeLists.txt  Makefile  main.cpp
